compiler: SSRANGE の範囲検査と翻訳時オプションの経路 (FR-024, FR-026, FR-093)
オプションがコード生成まで届く経路を通した。起動時の指定 (cobolc -q)、ソースの CBL /
PROCESS の指定、その重ね方 (ソースの指定があとに重なる)、名前と NO名前 の対であとに
書いたものが効く規則までを実装した。順序が意味を持つため CompilerOptions は書かれた
順を保つ。名前から値を引くだけの表にすると対の判定ができない。

その上で SSRANGE を実装した。指定があれば、実行時に決まる添字と部分参照の位置を実行時に
検査し、範囲外なら RangeCheckException で止まる。定数で書かれたものは従来どおり翻訳時に
検査する。

検査は積まれた値をそのまま返す形にしてある。位置の計算の途中へ 1 つ挟むだけで済み、
指定がないときの命令列がまったく変わらない。検査のために計算の形を組み替えると、
指定がないときの挙動まで動いてしまう。既定は検査しない側であり、そこは参照実装と
一致していなければならない。範囲外の添字が記憶域の別の場所を読み書きするのは、
移行時に食い違わせないためにそのまま残す。

範囲外で黙って続けないのは、範囲外の参照がそのあとの結果を信用できなくするためである。

P-027 は部分参照の長さの実行時決定を残して一部解決、P-023 は SOURCEFORMAT に加えて
SSRANGE が効くようになり一部解決とした。効かないオプションの警告には診断の重大度が
要るため、まだ入れていない。

テストは 666 件 (ランタイム 217、オラクル 50、コンパイラ 399)。

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01WNJRTEKNzA6BthcXkRnCG3