@@ -1,5 +1,6 @@
 package dev.cobolonjava.compiler.source;
 
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.Locale;
 import java.util.Map;
@@ -22,7 +23,8 @@ public record CompilerOptions(Map<String, String> values) {
     public CompilerOptions {
         Map<String, String> normalized = new LinkedHashMap<>();
         values.forEach((name, value) -> normalized.put(name.toUpperCase(Locale.ROOT), value));
-        values = Map.copyOf(normalized);
+        // 書かれた順を保つ。ON / OFF の対はあとに書いたものが効くためである
+        values = Collections.unmodifiableMap(normalized);
     }
 
     /** 指定した名前のオプションが与えられているか。 */
@@ -48,6 +50,36 @@ public record CompilerOptions(Map<String, String> values) {
             default -> throw new SourceFormatException(
                     "unknown SOURCEFORMAT value: " + text);
         });
+    }
+
+    /**
+     * {@code SSRANGE} が効いているか (要件 FR-024, FR-026)。
+     *
+     * <p>指定があれば、実行時に決まる添字と部分参照の位置を<b>実行時に検査する</b>。
+     * 既定は検査しない。参照実装の既定 ({@code NOSSRANGE}) に合わせている。
+     */
+    public boolean subscriptRangeChecks() {
+        return toggle("SSRANGE");
+    }
+
+    /**
+     * {@code 名前} と {@code NO名前} の対で指定するオプションの状態。
+     *
+     * <p><b>あとに書いたものが効く</b>。{@code CBL NOSSRANGE,SSRANGE} は検査する。
+     * 参照実装の規則であり、コピー句や既定の指定を局所的に打ち消す書き方が成り立つ。
+     */
+    public boolean toggle(String name) {
+        String on = name.toUpperCase(Locale.ROOT);
+        String off = "NO" + on;
+        boolean enabled = false;
+        for (String key : values.keySet()) {
+            if (key.equals(on)) {
+                enabled = true;
+            } else if (key.equals(off)) {
+                enabled = false;
+            }
+        }
+        return enabled;
     }
 
     /** 別のオプションの集まりを重ねる。あとから与えたものが優先する。 */
